Fixed bugs with background image and alignment of form

--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,18 @@
 	list-style: none;
 	text-decoration: none;
 }
-
-body {
-	width: 100%;
+html {
 	height: 100%;
+}
+body {
+	height: 100%;
+	background: url(../img/background.jpg) center no-repeat;
+	background-size: cover;
 }
 
 /*==================   WRAPPER   ==================*/
 .wrapper {
-	width: 100%;
+	min-height: 600px;
 	height: 100%;
 }
 .clearfix:after {
@@ -42,9 +45,6 @@ body {
 	float: right;
 	margin-right: 7px;
 	font-size: 0;
-}
-.header-menu li {
-	display: inline-block;
 }
 .header-menu a:hover {
 	background: #4eabda;
@@ -95,15 +95,10 @@ body {
 /*==================   CONTENT   ==================*/
 .main-section {
 	position: relative;
-	width: 100%;
-	height: 100%;
+	min-height: 564px;
+	height: 94%;
 }
 
-.image {
-	display: block;
-	width: 100%;
-	height: 100%;
-}
 
 /*==================   FORM   ==================*/
 .registration {
